# secred

./: README.md
temp-service/: .env  Cargo.toml  docker-compose.yml
temp-service/migrations/: 0001_create_link_table.sql
temp-service/src/: main.rs  router.rs  service.rs
temp-service/src/app/: mod.rs  router.rs
temp-service/src/data/: mod.rs  pool.rs
temp-service/src/data/models/: link.rs
temp-service/src/data/service/: link_service.rs
temp-service/src/web/link/: mod.rs
