[package]
name = "temp-service"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.14", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
